# pro-con

./: .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: producer.py
